# 3002_Project

./: .gitignore  CLION_SETUP.md  CMakeLists.txt  DataLoader.cpp  DataLoader.h  DataReporter.h  File Structure  Forecaster.cpp  Forecaster.h  InventoryAlert.cpp  PricingStrategy.cpp  PricingStrategy.h  README.md  ThreadManager.cpp  ThreadManager.h  sales_history.txt
include/: InventoryAlert.h  ThreadManager.h  Visualizer.h
output/: dashboard.html  price_trend.csv  price_trend_detailed.csv
src/: ThreadManager.cpp  Visualizer.cpp  dashboard.html  main.cpp  thread_demo.cpp
